# claude-code-pretty

./: .gitignore  Makefile  README.md  claude-pretty.sh  pyproject.toml  show-colors.sh  test-prompt.md
.bctx/: config.json
.bctx/templates/_default/: context.md
.bctx/templates/bug/: context.md
.github/workflows/: callable-ci.yml  release.yml  show-colors.yml
_old/: Makefile  claude-pretty-unified.sh
src/claudecodepretty/: cli.py  colors.py  constants.py  parser.py
src/claudecodepretty/commands/: show.py  stream.py
src/claudecodepretty/commands/sessions/: __init__.py  discovery.py  server.py  templates.py
src/claudecodepretty/handlers/: __init__.py  assistant.py  base.py  result.py  stream.py  system.py  user.py
src/claudecodepretty/handlers/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  notebook.py  read.py  task.py  todo.py  write.py
src/claudecodepretty/modes/: __init__.py  replay.py  stream.py
src/claudecodepretty/renderers/: __init__.py  ansi.py  base.py  html.py  session.py  template.py
src/claudepretty/: cli.py  constants.py  parser.py
src/claudepretty/handlers/: __init__.py  assistant.py  base.py  result.py  stream.py  system.py  user.py
src/claudepretty/handlers/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  notebook.py  read.py  task.py  todo.py  write.py
src/claudepretty/modes/: __init__.py  replay.py  stream.py
tests/: test_parser.py
